--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,25 +15,25 @@
             android:layout_height="match_parent" >
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/addButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/add" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/subtractButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/subtract" />
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/multiplyButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/multiply" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/divideButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/divide" />
@@ -44,25 +44,25 @@
             android:layout_height="match_parent" >
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/sevenButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/seven" />
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/eightButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/eight" />
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/nineButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/nine" />
 
             <Button
-                android:id="@+id/button8"
+                android:id="@+id/exponentButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/exponent" />
@@ -73,25 +73,25 @@
             android:layout_height="match_parent" >
 
             <Button
-                android:id="@+id/button9"
+                android:id="@+id/fourButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/four" />
 
             <Button
-                android:id="@+id/button10"
+                android:id="@+id/fiveButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/five" />
 
             <Button
-                android:id="@+id/button11"
+                android:id="@+id/sixButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/six" />
 
             <Button
-                android:id="@+id/button12"
+                android:id="@+id/parenthesesButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/parentheses" />
@@ -102,25 +102,25 @@
             android:layout_height="match_parent" >
 
             <Button
-                android:id="@+id/button13"
+                android:id="@+id/oneButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/one" />
 
             <Button
-                android:id="@+id/button14"
+                android:id="@+id/twoButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/two" />
 
             <Button
-                android:id="@+id/button15"
+                android:id="@+id/threeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/three" />
 
             <Button
-                android:id="@+id/button16"
+                android:id="@+id/clearButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/clear" />
@@ -132,25 +132,25 @@
             android:layout_height="match_parent" >
 
             <Button
-                android:id="@+id/button17"
+                android:id="@+id/plusminusButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/plusMinus" />
 
             <Button
-                android:id="@+id/button18"
+                android:id="@+id/zeroButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/zero" />
 
             <Button
-                android:id="@+id/button19"
+                android:id="@+id/pointButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:text="@string/point" />
 
             <Button
-                android:id="@+id/button20"
+                android:id="@+id/equalsButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/equals" />
