--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,33 +22,41 @@
                 android:id="@+id/addButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/add" />
+                android:text="@string/add"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/subtractButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/subtract" />
+                android:text="@string/subtract"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/multiplyButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/multiply" />
+                android:text="@string/multiply"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/divideButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/divide" />
+                android:text="@string/divide"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
         </TableRow>
 
         <TableRow
@@ -59,33 +67,41 @@
                 android:id="@+id/sevenButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/seven" />
+                android:text="@string/seven"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/eightButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/eight" />
+                android:text="@string/eight"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/nineButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/nine" />
+                android:text="@string/nine"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/exponentButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/exponent" />
+                android:text="@string/exponent"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
         </TableRow>
 
         <TableRow
@@ -96,33 +112,41 @@
                 android:id="@+id/fourButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/four" />
+                android:text="@string/four"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/fiveButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/five" />
+                android:text="@string/five"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/sixButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/six" />
+                android:text="@string/six"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/parenthesesButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/parentheses" />
+                android:text="@string/parentheses"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
         </TableRow>
 
         <TableRow
@@ -133,33 +157,41 @@
                 android:id="@+id/oneButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/one" />
+                android:text="@string/one"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/twoButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/two" />
+                android:text="@string/two"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/threeButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/three" />
+                android:text="@string/three"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/clearButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/clear" />
+                android:text="@string/clear"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
         </TableRow>
 
@@ -171,55 +203,72 @@
                 android:id="@+id/plusminusButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/plusMinus" />
+                android:text="@string/plusMinus"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/zeroButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/zero" />
+                android:text="@string/zero"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/pointButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/point" />
+                android:text="@string/point"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
 
             <Button
                 android:id="@+id/equalsButton"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_weight="1"
-                android:text="@string/equals" />
+                android:text="@string/equals"
+                android:background="@drawable/circle"
+                android:layout_margin="5dp" />
         </TableRow>
     </TableLayout>
 
-    <TextView
+    <EditText
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/display"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="false"
+        android:inputType="none"
+        android:textSize="36sp"
+        android:textAlignment="textEnd"
+        tools:ignore="LabelFor" />
 
-    <Button
+    <ImageButton
         android:id="@+id/backspaceButton"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
+        android:contentDescription="@string/backspace"
         android:layout_marginBottom="4dp"
         android:text="@string/backspace"
+        android:background="@drawable/circle"
+        app:srcCompat="@drawable/backspace"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="5dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
